NFCKT-720 transmits the telematik ID of a pharmacy to SMC-B