@@ -1,12 +1,5 @@
 package health.ere.ps.service.cardlink;
 
-import java.util.Arrays;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.logging.Level;
-import java.util.logging.Logger;
-
 import de.gematik.ws.conn.connectorcontext.v2.ContextType;
 import de.gematik.ws.conn.eventservice.wsdl.v7.EventServicePortType;
 import de.gematik.ws.conn.vsds.vsdservice.v5.FaultMessage;
@@ -21,15 +14,21 @@ import jakarta.enterprise.context.Dependent;
 import jakarta.websocket.ClientEndpointConfig;
 import jakarta.websocket.HandshakeResponse;
 
+import java.util.HashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.logging.Level;
+import java.util.logging.Logger;
+
 @Unremovable
 @Dependent
 public class AddJWTConfigurator extends ClientEndpointConfig.Configurator {
 
     private static final Logger log = Logger.getLogger(AddJWTConfigurator.class.getName());
-    
+
     BearerTokenService bearerTokenService;
 
-    //In the future it should be managed automatically by the webclient, including its renewal
+    // In the future it should be managed automatically by the webclient, including its renewal
     Map<RuntimeConfig, String> bearerToken = new HashMap<>();
 
     MultiConnectorServicesProvider connectorServicesProvider;
@@ -38,15 +37,15 @@ public class AddJWTConfigurator extends ClientEndpointConfig.Configurator {
     @Override
     public void beforeRequest(Map<String, List<String>> headers) {
 
-        if(bearerTokenService == null) {
+        if (bearerTokenService == null) {
             bearerTokenService = Arc.container().select(BearerTokenService.class).get();
         }
-        if(connectorServicesProvider == null) {
+        if (connectorServicesProvider == null) {
             connectorServicesProvider = Arc.container().select(MultiConnectorServicesProvider.class).get();
         }
 
         RuntimeConfig runtimeConfig = new RuntimeConfig();
-        if(connectorServicesProvider != null && bearerTokenService != null) {
+        if (connectorServicesProvider != null && bearerTokenService != null) {
             ContextType context = connectorServicesProvider.getContextType(runtimeConfig);
             EventServicePortType eventServicePortType = connectorServicesProvider.getEventServicePortType(runtimeConfig);
             try {
@@ -56,7 +55,7 @@ public class AddJWTConfigurator extends ClientEndpointConfig.Configurator {
             }
 
             BearerTokenManageService.requestNewAccessTokenIfNecessary(runtimeConfig, bearerToken, bearerTokenService, null, null);
-            headers.put("Authorization", Arrays.asList("Bearer "+bearerToken.get(runtimeConfig)));
+            headers.put("Authorization", List.of("Bearer " + bearerToken.get(runtimeConfig)));
         } else {
             log.log(Level.SEVERE, "Could not get bearer token or connector services provider, won't add JWT to websocket connection.");
         }
@@ -66,5 +65,4 @@ public class AddJWTConfigurator extends ClientEndpointConfig.Configurator {
     public void afterResponse(HandshakeResponse handshakeResponse) {
 
     }
-    
 }
